# models/post.go
@@ -3,10 +3,10 @@ package models
 import "gorm.io/gorm"
 
 type Post struct {
-	gorm.Model
-	Title    string    `json:"title"`
-	Content  string    `json:"content"`
-	UserId   uint      `json:"user_id"`
-	User     User      `json:"-"`
-	Comments []Comment `json:"comments"`
+	gorm.Model `swaggerignore:"true"`
+	Title      string    `json:"title"`
+	Content    string    `json:"content"`
+	UserId     uint      `json:"user_id"`
+	User       User      `json:"-"`
+	Comments   []Comment `json:"comments"`
 }
