# models/user.go
@@ -6,11 +6,11 @@ import (
 )
 
 type User struct {
-	gorm.Model
-	Username string `json:"username" gorm:"unique"`
-	Email    string `json:"email"`
-	Password string `json:"-"`
-	Role     string `json:"role"`
+	gorm.Model `swaggerignore:"true"`
+	Username   string `json:"username" gorm:"unique"`
+	Email      string `json:"email"`
+	Password   string `json:"-"`
+	Role       string `json:"role"`
 }
 
 func (user *User) HashPassword(password string) error {
